# backtest-engine

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  README_BULK_FETCH.md  fetch_market_data.py  generate_fyers_token.py  main.py  nifty_momentum_backtest.py  pyproject.toml
output/: rsi_reversal.pine
output/pine/: 10-20-strategy-v1-optimized.pine  ema-range-breakout.pine
output/pine/intraday/: nifty_momentum_best.pine
src/: config.py  data_loader.py  engine.py  fyers_auth.py  fyers_data.py  indicators.py  metrics.py  optimizer.py  pine_translator.py  strategy.py
strategies/: bb_squeeze.py  ema_breakout_trailing.py  ema_range_breakout.py  macd_crossover.py  rsi_reversal.py
strategies/intraday/: nifty_momentum.py
strategies/swing/: bb_squeeze.py  macd_crossover.py  rsi_reversal.py
tests/: test_data_loader.py  test_engine.py  test_fyers_data.py  test_indicators.py  test_metrics.py  test_optimizer.py
tests/fixtures/: sample_ohlcv.csv
