[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine"
version = "0.1.0"
description = "Python backtesting engine matching TradingView's Strategy Tester"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
backtest-engine = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
